fixed nav bar and spacing for buttons

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,7 +17,5 @@ body {
 	background-color: white;
 	color: black;
 	border: 2px solid #4caf50;
-}
-.page-container {
-	margin-top: 100px;	
+	margin-top: 60px;
 }
